@@ -1,6 +1,6 @@
 <?php
 // Reroutes to react app
-//header("location: http://192.168.1.15:3000")
+header("location: http://192.168.1.15:3000")
 ?>
 
 <!DOCTYPE html>
